# toctoc

./: Cargo.toml  README.md
benches/: bench.rs  twitter.json
derive/: Cargo.toml
derive/src/: bound.rs  common.rs  de.rs  lib.rs  ser.rs
src/: TODO  bevy_impls.rs  bin.rs  buffer.rs  bytes.rs  careful.rs  error.rs  export.rs  ignore.rs  lib.rs  owned.rs  place.rs  serde_integration.rs
src/bson/: de.rs  mod.rs  owned.rs  ser.rs
src/de/: impls.rs  mod.rs
src/json/: array.rs  de.rs  mod.rs  number.rs  object.rs  owned.rs  ser.rs  simd.rs  value.rs
src/ser/: impls.rs  mod.rs
tests/: test_binhint.rs  test_bson.rs  test_derive.rs  test_enum.rs  test_nested.rs  test_number.rs  test_zerocopy.rs
tests/regression/: issue9.rs
