[package]
name = "knocknoc"
version = "0.1.13"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Data structure serialization library with several opposite design goals from Serde."
repository = "https://github.com/dtolnay/knocknoc"
documentation = "https://docs.rs/knocknoc"
readme = "README.md"
edition = "2018"

[profile.release]
debug = true
lto = false

[dependencies]
itoa = "0.4.3"
knocknoc_internal = { version = "=0.1.13", path = "derive" }
ryu = "1.0"
bintext = "0.1.3"
simd-json = { version = "0.3.14", default-features = false, features = ["swar-number-parsing"], optional = true }
paste = "1.0.0"
faster-utf8-validator = { git = "https://github.com/simd-lite/faster-utf8-validator-rs", branch = "main" }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
core_affinity = "0.5.10"
automod = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simd-json = "0.3.14"
bson = "1.0.0"

[workspace]
members = ["derive"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["simd"]

# SIMD deserialization (default)
simd = ["simd-json"]

# Use ser and de `Context` as std::any::Any
any-context = []

# Manipulates the stack to (de)serialize deeply nested structs
deeply-nested = []

# Better errors when debuging
error = ["anyhow"]

# Allow custom alignment requirements by also serializing them as
# the first field in the root document. BSON only
higher-rank-alignment = []

[[bench]]
name = "bench"
harness = false