[package]
name = "bevy_toctoc"
version = "0.1.13"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fork of toctoc (de)serialization for Bevy"
repository = "https://github.com/lassade/bevy_toctoc"
documentation = "https://docs.rs/bevy_toctoc"
readme = "README.md"
edition = "2018"

[profile.release]
debug = true
lto = false

[dependencies]
itoa = "0.4.3"
toctoc_internal = { version = "=0.1.13", path = "derive" }
ryu = "1.0"
bintext = "0.1.3"
simd-json = { version = "0.3.18", default-features = false, features = ["swar-number-parsing"], optional = true }
paste = "1.0.0"
faster-utf8-validator = { git = "https://github.com/simd-lite/faster-utf8-validator-rs", branch = "main" }
anyhow = { version = "1.0", optional = true }
ufmt = { version = "0.1.0", features = ["std"], optional = true }

bevy = "0.2"
uuid = "0.8"

[dev-dependencies]
criterion = "0.3"
core_affinity = "0.5.10"
automod = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simd-json = "0.3.18"
bson = "1.0.0"

[workspace]
members = ["derive"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["simd", "ufmt1", "error"]

# SIMD deserialization (enabled by default)
simd = ["simd-json"]

# Uses the `ufmt` crate to format errors (enabled by default)
ufmt1 = ["ufmt"]

# Better errors when debuging
error = ["anyhow"]

# Allow custom alignment requirements by also serializing them as
# the first field in the root document. BSON only
higher-rank-alignment = []

[[bench]]
name = "bench"
harness = false