[package]
name = "knocknoc_internal"
version = "0.1.13"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for knocknoc. Use the re-exports from the knocknoc crate instead."
repository = "https://github.com/dtolnay/knocknoc"
documentation = "https://docs.rs/knocknoc"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
